<resources>
    <string name="app_name">ROG Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_permission">
        This app needs you to allow this permission in order to function.Will you allow it
    </string>
    <string name="click_request_permission">Click here to re-authorize</string>
    <string name="common_error">An error occurred, please check again</string>
    <string name="app_manager">App Manager</string>
    <string name="category">Security</string>
    <string name="theme">Theme</string>
    <string name="setting">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_app">Search App</string>
    <string name="media">Media</string>
    <string name="create_folder">Create Folder</string>
    <string name="set_name">Set name…</string>
    <string name="ok">OK</string>
    <string name="select_all">Select All</string>
    <string name="open">Open</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="image">Image</string>
    <string name="confirm_delete_section">Confirm to delete this section</string>
    <string name="cancel">Cancel</string>
    <string name="test">Test</string>
    <string name="loading">Loading</string>
    <string name="make_video_des">Processing time depends on network speed and file size.\nPlease wait a second</string>
    <string name="resolving">Resolving %1$s </string>
    <string name="dot" translatable="false">.</string>
    <integer name="dots_anim_time">1000</integer>
</resources>