<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BlackTheme">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTrash"
        android:layout_width="@dimen/size_70"
        android:layout_height="@dimen/size_70"
        android:layout_marginTop="@dimen/size_10"
        android:src="@drawable/ic_trash_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:text="@string/confirm_delete_section"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toEndOf="@+id/ivTrash"
        app:layout_constraintStart_toStartOf="@+id/ivTrash"
        app:layout_constraintTop_toBottomOf="@+id/ivTrash" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancel"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_50"
        android:layout_margin="@dimen/size_16"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirm"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_52"
        android:layout_marginEnd="@dimen/size_16"
        android:background="@drawable/bg_corner_24_green"
        android:gravity="center"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toBottomOf="@id/tvCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCancel"
        app:layout_constraintTop_toTopOf="@id/tvCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>