<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/size_50"
        android:layout_height="@dimen/size_50"
        android:layout_marginStart="@dimen/size_20"
        android:scaleType="centerInside"
        android:src="@drawable/ic_back"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open"
        app:layout_constraintBottom_toBottomOf="@id/imgBack"
        app:layout_constraintStart_toEndOf="@id/imgBack"
        app:layout_constraintTop_toTopOf="@id/imgBack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_all"
        app:layout_constraintBottom_toBottomOf="@id/imgSelectAll"
        app:layout_constraintEnd_toStartOf="@id/imgSelectAll"
        app:layout_constraintTop_toTopOf="@id/imgSelectAll" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgSelectAll"
        android:layout_width="@dimen/size_50"
        android:layout_height="@dimen/size_50"
        android:layout_marginEnd="@dimen/size_20"
        android:padding="@dimen/size_15"
        android:scaleType="centerInside"
        android:src="@drawable/ic_circle_stroke_white"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvImage"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_0"
        android:layout_margin="@dimen/size_10"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/tvRestore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBack"
        app:spanCount="3"
        tools:listitem="@layout/item_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRestore"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_50"
        android:text="@string/restore"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvDelete"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDelete"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_50"
        android:text="@string/delete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tvRestore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvRestore" />

    <include
        android:id="@+id/viewLoading"
        layout="@layout/view_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>